# microprojects

add_two_numbers/: Cargo.toml  README.md  notes.txt
add_two_numbers/src/: lib.rs  main.rs
egui-arch-01/: Cargo.toml
egui-arch-01/src/: lib.rs  main.rs
egui-arch-01/tests/: e2e_kittest.rs
temperature-converter/: Cargo.toml
temperature-converter/src/: main.rs
