[package]
name = "temperature-converter"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Usually too annoying for normal projects
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

# High-value strictness
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
wildcard_imports = "deny"
implicit_clone = "deny"
redundant_clone = "deny"
inefficient_to_string = "deny"
unused_async = "deny"
await_holding_lock = "deny"
